// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/primitives/Button snapshots should match snapshot in disabled state 1`] = `
<button
  aria-busy="false"
  class="Button Button--md Button--primary Button--destructive"
  disabled=""
>
  <span
    class="Button__label"
  >
    Disabled Destructive
  </span>
</button>
`;

exports[`components/primitives/Button snapshots should match snapshot with all emphasis variants: Button emphasis link 1`] = `
<button
  aria-busy="false"
  class="Button Button--md Button--link"
>
  <span
    class="Button__label"
  >
    Emphasis 
    link
  </span>
</button>
`;

exports[`components/primitives/Button snapshots should match snapshot with all emphasis variants: Button emphasis primary 1`] = `
<button
  aria-busy="false"
  class="Button Button--md Button--primary"
>
  <span
    class="Button__label"
  >
    Emphasis 
    primary
  </span>
</button>
`;

exports[`components/primitives/Button snapshots should match snapshot with all emphasis variants: Button emphasis quaternary 1`] = `
<button
  aria-busy="false"
  class="Button Button--md Button--quaternary"
>
  <span
    class="Button__label"
  >
    Emphasis 
    quaternary
  </span>
</button>
`;

exports[`components/primitives/Button snapshots should match snapshot with all emphasis variants: Button emphasis secondary 1`] = `
<button
  aria-busy="false"
  class="Button Button--md Button--secondary"
>
  <span
    class="Button__label"
  >
    Emphasis 
    secondary
  </span>
</button>
`;

exports[`components/primitives/Button snapshots should match snapshot with all emphasis variants: Button emphasis tertiary 1`] = `
<button
  aria-busy="false"
  class="Button Button--md Button--tertiary"
>
  <span
    class="Button__label"
  >
    Emphasis 
    tertiary
  </span>
</button>
`;

exports[`components/primitives/Button snapshots should match snapshot with all props 1`] = `
<button
  aria-busy="true"
  class="Button Button--lg Button--secondary Button--destructive Button--loading Button--full-width Button--fixed-width Button--inverted custom-class"
  disabled=""
  style="width: 300px;"
>
  <span
    aria-label="Loading"
    class="Button__loading"
    role="status"
  >
    <span
      aria-hidden="true"
      class="Button__spinner Button__spinner--lg Button__spinner--inverted"
    />
  </span>
  <span
    class="Button__label"
  >
    All Props
  </span>
</button>
`;

exports[`components/primitives/Button snapshots should match snapshot with all size variants: Button size lg 1`] = `
<button
  aria-busy="false"
  class="Button Button--lg Button--primary"
>
  <span
    class="Button__label"
  >
    Size 
    lg
  </span>
</button>
`;

exports[`components/primitives/Button snapshots should match snapshot with all size variants: Button size md 1`] = `
<button
  aria-busy="false"
  class="Button Button--md Button--primary"
>
  <span
    class="Button__label"
  >
    Size 
    md
  </span>
</button>
`;

exports[`components/primitives/Button snapshots should match snapshot with all size variants: Button size sm 1`] = `
<button
  aria-busy="false"
  class="Button Button--sm Button--primary"
>
  <span
    class="Button__label"
  >
    Size 
    sm
  </span>
</button>
`;

exports[`components/primitives/Button snapshots should match snapshot with all size variants: Button size xs 1`] = `
<button
  aria-busy="false"
  class="Button Button--xs Button--primary"
>
  <span
    class="Button__label"
  >
    Size 
    xs
  </span>
</button>
`;

exports[`components/primitives/Button snapshots should match snapshot with default props 1`] = `
<button
  aria-busy="false"
  class="Button Button--md Button--primary"
>
  <span
    class="Button__label"
  >
    Default
  </span>
</button>
`;
